[package]
name = "vacation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.9"
anyhow = "1.0.68"
serde_json = "1.0.91"

[dependencies.gltf]
version = "1.0.0"
features = ["KHR_texture_transform", "KHR_materials_unlit", "extras"]

[dependencies.gltf-json]
version = "1.0.0"
features = ["KHR_texture_transform", "KHR_materials_unlit", "extras"]
